JSA-10/10/2018 Correciones flujo Orden compra

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/OrdenCompra/OrdenCompra.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/OrdenCompra/OrdenCompra.cshtml
@@ -67,6 +67,7 @@
 
     </script>
 </head>
+
 <body>
     @using (Html.BeginForm("CrearOrdenCompra", "OrdenCompra", FormMethod.Post))
     {
@@ -75,6 +76,12 @@
         @Html.HiddenFor(m => m.IdEmpresa)
         @Html.HiddenFor(m => m.FechaRequisicion)
         @Html.HiddenFor(m => m.IdRequisicion)
+        <div class="page-loader-wrapper">
+            <div class="loader">
+                <div class="m-t-30"><img src="~/assets/images/LogoCorpKonsilio183x183.png" width="48" height="48" alt="Alpino"></div>
+                <p>Espere por favor</p>
+            </div>
+        </div>
         <section class="content home">
             <div class="container-fluid">
                 <div class="block-header">
