--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/OrdenCompra/OrdenCompraComplementoGas.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/OrdenCompra/OrdenCompraComplementoGas.cshtml
@@ -9,6 +9,12 @@
 
 </script>
 <link rel="stylesheet" href="~/assets/plugins/light-gallery/css/lightgallery.css">
+<div class="page-loader-wrapper">
+    <div class="loader">
+        <div class="m-t-30"><img src="~/assets/images/LogoCorpKonsilio183x183.png" width="48" height="48" alt="Alpino"></div>
+        <p>Espere por favor</p>
+    </div>
+</div>
 <section class="content home">
     <div class="container-fluid">
         @using (Html.BeginForm())
