--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/OrdenCompra/Ordenes.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/OrdenCompra/Ordenes.cshtml
@@ -10,6 +10,12 @@
 <body style="padding-top:10px">
     @using (Html.BeginForm("Ordenes", "OrdenCompra", FormMethod.Post))
     {
+        <div class="page-loader-wrapper">
+            <div class="loader">
+                <div class="m-t-30"><img src="~/assets/images/LogoCorpKonsilio183x183.png" width="48" height="48" alt="Alpino"></div>
+                <p>Espere por favor</p>
+            </div>
+        </div>
         <section class="content home">
             <div class="container-fluid">
                 <div class="block-header">
