--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/EditorTemplates/OrdenCompraProductoDTO.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/EditorTemplates/OrdenCompraProductoDTO.cshtml
@@ -1,11 +1,12 @@
 ﻿@model MVC.Presentacion.Models.OrdenCompra.OrdenCompraProductoDTO
 <tr>
-    <td>@Model.IdTipoProducto</td>
+    <td>@Model.ProductoServicioTipo</td>
     <td>@Model.Producto</td>
     <td>@Model.CantidadAComprar</td>
     <td>@Model.UnidadMedida</td>
     <td>@Model.Aplicacion</td>
     <td>@Model.CentroCosto</td>
+    <td>@ViewBag.Proveedor </td>
     <td>@Model.CuentaContable</td>
     <td>@Model.Precio</td>
     <td>@Model.Descuento</td>
