--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/OrdenCompra/OrdenCompraAutorizacion.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/OrdenCompra/OrdenCompraAutorizacion.cshtml
@@ -1,5 +1,10 @@
 ﻿@model MVC.Presentacion.Models.OrdenCompra.OrdenCompraDTO
-
+<div class="page-loader-wrapper">
+    <div class="loader">
+        <div class="m-t-30"><img src="~/assets/images/LogoCorpKonsilio183x183.png" width="48" height="48" alt="Alpino"></div>
+        <p>Espere por favor</p>
+    </div>
+</div>
 <body>
     @using (Html.BeginForm("Autorizar", "OrdenCompra", FormMethod.Post))
     {
@@ -86,17 +91,18 @@
                                     <table class="table table-hover">
                                         <thead>
                                             <tr>
-                                                <td><b>Tipo</b></td>
-                                                <td><b>Producto</b></td>
-                                                <td><b>Requeridos</b></td>
-                                                <td><b>Unidad</b></td>                                            
-                                                <td><b>Centro de costo</b></td>
-                                                <td><b>Cuenta Contable</b></td>
-                                                <td><b>Cantidad</b></td>
-                                                <td><b>Precio</b></td>
-                                                <td><b>%Desc</b></td>
-                                                <td><b>%IVA</b></td>
-                                                <td><b>Importe</b></td>
+                                                <td><strong>Tipo</strong></td>
+                                                <td><strong>Producto</strong></td>
+                                                <td><strong>Requeridos</strong></td>
+                                                <td><strong>Unidad</strong></td>                                            
+                                                <td><strong>Centro de costo</strong></td>
+                                                <td><strong>Cuenta Contable</strong></td>
+                                                <td><strong>Cantidad</strong></td>
+                                                <td><strong>Precio</strong></td>
+                                                <td><strong>%Desc</strong></td>
+                                                <td><strong>%IVA</strong></td>
+                                                <td><strong>%Ieps</strong></td>
+                                                <td><strong>Importe</strong></td>
                                             </tr>
                                         </thead>
                                         <tbody>
@@ -109,6 +115,7 @@
                                                     <td>@m.UnidadMedida</td>                                                    
                                                     <td>@m.CentroCosto</td>
                                                     <td>@m.CuentaContable</td>
+                                                    <td>@m.Cantidad</td>
                                                     <td>@m.Precio</td>
                                                     <td>@m.Descuento</td>
                                                     <td>@m.IVA</td>
