JSA-11/10/2018 Correción de ortografía

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/OrdenCompra/OrdenCompraComplemento.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/OrdenCompra/OrdenCompraComplemento.cshtml
@@ -254,7 +254,7 @@
                                 <div class="row clearfix">
                                     <label>Pagar: </label>
                                     @Html.TextBox("0") 
-                                    <input type="button" value="Solisitar Pago" formaction="OrdenCompraPago" class="btn btn-default btn-round" />
+                                    <input type="button" value="Solicitar Pago" formaction="OrdenCompraPago" class="btn btn-default btn-round" />
                                 </div>
                             </div>
                         </div>
